--- a/.github/workflows/static-analyze.yml
+++ b/.github/workflows/static-analyze.yml
@@ -96,3 +96,6 @@ jobs:
 
       - name: "Static Analyze - PHPStan"
         run: "composer static:analyze:phpstan -- --error-format=github"
+
+      - name: "Static Analyze Tests - PHPStan"
+        run: "composer static:analyze:phpstan:tests --error-format=github"
