--- a/tools/phpstan/composer.json
+++ b/tools/phpstan/composer.json
@@ -2,7 +2,8 @@
   "name": "flow-php/flow-tools",
   "description": "Flow PHP ETL - Tools",
   "require-dev": {
-    "phpstan/phpstan": "^2.0"
+    "phpstan/phpstan": "^2.0",
+    "spaze/phpstan-disallowed-calls": "^4.0"
   },
   "config": {
     "allow-plugins": false
