Double dash tells composer to pass arguments to script

--- a/.github/workflows/static-analyze.yml
+++ b/.github/workflows/static-analyze.yml
@@ -95,4 +95,4 @@ jobs:
         run: "composer static:analyze:cs-fixer"
 
       - name: "Static Analyze - PHPStan"
-        run: "composer static:analyze:phpstan --error-format=github"
+        run: "composer static:analyze:phpstan -- --error-format=github"
