--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -136,7 +136,7 @@ jobs:
           path: "${{ steps.composer-cache.outputs.dir }}"
           key: "php-${{ matrix.php-version }}-${{ matrix.dependencies }}-composer-${{ hashFiles('**/composer.lock') }}"
           restore-keys: |
-            php-${{ matrix.php-version }}-${{ matrix.dependencies }}-composer-
+            php-${{ matrix.php-version }}-${{ matrix.dependencies }}-composer-${{ hashFiles('**/composer.lock') }}
 
       - name: "Install lowest dependencies"
         if: ${{ matrix.dependencies == 'lowest' }}
