--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -134,9 +134,9 @@ jobs:
         uses: "actions/cache@v4"
         with:
           path: "${{ steps.composer-cache.outputs.dir }}"
-          key: "php-${{ matrix.php-version }}-${{ matrix.dependencies }}-composer-${{ hashFiles('**/composer.lock') }}"
+          key: "php-${{ matrix.php-version }}-${{ matrix.dependencies }}-composer2-${{ hashFiles('**/composer.lock') }}"
           restore-keys: |
-            php-${{ matrix.php-version }}-${{ matrix.dependencies }}-composer-${{ hashFiles('**/composer.lock') }}
+            php-${{ matrix.php-version }}-${{ matrix.dependencies }}-composer2-${{ hashFiles('**/composer.lock') }}
 
       - name: "Install lowest dependencies"
         if: ${{ matrix.dependencies == 'lowest' }}
